// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Google Map has play mode: play settings 1`] = `
Array [
  Object {
    "clickableIcons": false,
    "disableDefaultUI": true,
    "draggableCursor": "crosshair",
    "gestureHandling": "auto",
    "mapTypeControl": true,
    "mapTypeControlOptions": Object {
      "mapTypeIds": Array [
        "hybrid",
        "roadmap",
      ],
    },
    "mapTypeId": "roadmap",
  },
]
`;

exports[`Google Map has play mode: update selected position 1`] = `
Object {
  "lat": 8,
  "lng": 8,
}
`;

exports[`Google Map has preview mode: preview settings 1`] = `
Array [
  Object {
    "clickableIcons": false,
    "disableDefaultUI": true,
    "draggableCursor": "crosshair",
    "gestureHandling": "none",
    "mapTypeControl": false,
    "mapTypeControlOptions": Object {
      "mapTypeIds": Array [
        "hybrid",
        "roadmap",
      ],
    },
    "mapTypeId": "roadmap",
  },
]
`;

exports[`Google Map has result mode: result settings 1`] = `
Array [
  Object {
    "clickableIcons": false,
    "disableDefaultUI": true,
    "draggableCursor": "crosshair",
    "gestureHandling": "auto",
    "mapTypeControl": true,
    "mapTypeControlOptions": Object {
      "mapTypeIds": Array [
        "hybrid",
        "roadmap",
      ],
    },
    "mapTypeId": "roadmap",
  },
]
`;
